--- a/axum_tutorial/Cargo.toml
+++ b/axum_tutorial/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.9"
+tokio = { version = "1.0", features = ["full"] }
+serde = "1.0.137"
