--- a/axum_getting_started/Cargo.toml
+++ b/axum_getting_started/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.11"
+tokio = { version = "1.0", features = ["full"] }
+tracing = "0.1.35"
+tracing-subscriber = "0.3.14"
+serde = { version = "1.0.138", features = ["derive"] }
+serde_json = "1.0"
+once_cell = "*"
+tower-http = { version = "0.3.0", features = ["fs", "trace"] }
+
