--- a/axum_crud_api/Cargo.toml
+++ b/axum_crud_api/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.9"
+tokio = { version = "1.0", features = ["full"] }
+serde = "1.0.137"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3"}
+
+sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "chrono", "json", "postgres", "uuid"] }
+anyhow = "1.0.58"
+chrono = "0.4"
+serde_json = "1.0.57"
