Add feature "trace" to tower-http dependecy

--- a/axum_crud_api/Cargo.toml
+++ b/axum_crud_api/Cargo.toml
@@ -10,8 +10,9 @@ axum = "0.5.9"
 tokio = { version = "1.0", features = ["full"] }
 serde = "1.0.137"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3"}
+tracing-subscriber = { version = "0.3", features = ["env-filter"]}
 
 sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "json", "postgres"] }
 anyhow = "1.0.58"
 serde_json = "1.0.57"
+tower-http = { version = "0.3.4", features = ["trace"] }
